Update index.css to put heading to left side
To match changes to Contact page

--- a/css/index.css
+++ b/css/index.css
@@ -311,7 +311,7 @@ a:active {
 
  /* For heading of Contact Me page */
 .contact-head {
-    text-align: center;
+    text-align: left;
 }
 
 /* Formatting for list of exercies on Portfolio landing page */
